Dropdown still resetting after sending a message. Need a fix.

--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -123,8 +123,7 @@
         <div id="sendIndividualMessage" class="modal fade" role="dialog">
             <div class="modal-dialog">
                 <!-- Modal content-->
-                <form th:action="@{user/message/individual-message/insert}" th:method="PUT"
-                      enctype="multipart/form-data">
+                <form th:action="@{/user/message/individual-message/insert}" th:method="POST">
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -258,14 +257,10 @@
                                   class="form-horizontal"
                                   enctype="multipart/form-data">
                                 <label class="control-label">Enter Message:</label>
-                                <input style="display: none" ng-value="currentUserId" type="text" id="toUserId"
-                                       name="toUserId">
+                                <input style='display: none' ng-value="currentUserId" type="text" id="itoUserId" name="toUserId">
                                 <div class="input-group">
-                                    <input ng-model="currentMessage" type="text" class="form-control" id="message"
-                                           name="message">
-                        <span class="input-group-btn"><button type="submit" class="btn btn-default">Send! To
-                            {{currentName}}
-                        </button></span>
+                                    <input ng-model="currentMessage" type="text" class="form-control" id="imessage" name="message">
+                                    <span class="input-group-btn"><button id='sendind' type="submit" class="btn btn-default">Send to {{currentName}}</button></span>
                                 </div>
 
                                 <div class="text-center"><a ng-click="showFileUpload = !showFileUpload">Add file</a>
