--- a/src/main/resources/templates/fragment/dependency.html
+++ b/src/main/resources/templates/fragment/dependency.html
@@ -20,6 +20,7 @@
 
 
 <script type="text/javascript" th:src="@{/js/userAngular.js}"></script>
+<script type="text/javascript" th:src="@{/js/adminAngular.js}"></script>
 
 <meta charset="UTF-8"></meta>
 <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
