--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -4,12 +4,12 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" ng-app="messagingApp"
       ng-controller="userController">
 <th:block th:replace="fragment/User/top">
-
 </th:block>
 
 <div class="col-xs-7 col-sm-3 col-md-3 sidebar sidebar-left sidebar-animate sidebar-md-show">
     <ul class="nav navbar-stacked">
-        <select class="form-control" ng-model="typemsg" ng-init="typemsg=typemessages[0]" ng-options="t as t.name for t in typemessages"
+        <select class="form-control" ng-model="typemsg" ng-init="typemsg=typemessages[0]"
+                ng-options="t as t.name for t in typemessages"
                 ng-change="switchTypeMessage(typemsg)">
         </select>
 
@@ -29,6 +29,48 @@
 
 <div id="page-content-wrapper">
     <div class="container-fluid">
+
+        <!-- Enter Search Complete Modal -->
+        <div id="searchModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Invitation</h4>
+                    </div>
+                    <div class="modal-body">
+                        <label class="control-label">Invite Type</label>
+                        <select class="form-control"
+                                ng-init="option = options[0]"
+                                ng-model="option"
+                                ng-options="option as option.label for option in options"
+                                ng-change="updateTeamSelect()">
+                        </select>
+
+
+                        <label ng-if="option.label == 'Team'" class="control-label">Select Team</label>
+                        <select class="form-control"
+                                ng-if="option.label == 'Team'"
+                                ng-init="teamSelect = teamSelects[0]"
+                                ng-model="teamSelect"
+                                ng-options="teamSelect as teamSelect.teamName for teamSelect in teamSelects">
+                        </select>
+
+                        <label class="control-label">Enter Team Name</label>
+                        <input type="text" class="form-control" id="teamName" name="teamName">
+                        <label class="control-label">Enter Team Description</label>
+                        <input type="text" class="form-control" id="teamDescription" name="teamDescription">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-default">Invite</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <!-- Create Team Modal -->
         <div id="createTeamModal" class="modal fade" role="dialog">
@@ -257,10 +299,15 @@
                                   class="form-horizontal"
                                   enctype="multipart/form-data">
                                 <label class="control-label">Enter Message:</label>
-                                <input style='display: none' ng-value="currentUserId" type="text" id="itoUserId" name="toUserId">
+                                <input style='display: none' ng-value="currentUserId" type="text" id="itoUserId"
+                                       name="toUserId">
                                 <div class="input-group">
-                                    <input ng-model="currentMessage" type="text" class="form-control" id="imessage" name="message">
-                                    <span class="input-group-btn"><button id='sendind' type="submit" class="btn btn-default">Send to {{currentName}}</button></span>
+                                    <input ng-model="currentMessage" type="text" class="form-control" id="imessage"
+                                           name="message">
+                                    <span class="input-group-btn"><button id='sendind' type="submit"
+                                                                          class="btn btn-default">Send to
+                                        {{currentName}}
+                                    </button></span>
                                 </div>
 
                                 <div class="text-center"><a ng-click="showFileUpload = !showFileUpload">Add file</a>
