--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -106,6 +106,10 @@
                             <a data-toggle="modal" data-target="#sendTeamMessageModal">Send Team Message
                                 (For test purpose)</a>
                         </li>
+
+                        <li>
+                            <a data-toggle="modal" data-target="#searchModal">Search Modal</a>
+                        </li>
                     </ul>
                 </li>
 
