--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -18,35 +18,35 @@
         </div>
 
         <!-- Search bar and dropdown menu -->
-        <div class="col-md-6 col-md-3 col-md-offset-3" style="margin-top: 5px">
+        <div class="col-xs-5 col-md-offset-2" style="margin-top: 8px">
             <div class="input-group">
                 <div class="input-group-btn search-panel">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                        <span id="search_concept">-- Choose --</span> <span class="caret"></span>
+                        <span id="search_concept">Search for...</span> <span class="caret"></span>
                     </button>
-                    <ul class="search-dropdown-menu" role="menu">
-                        <li><a href="#individual">Individual</a></li>
-                        <li><a href="#team">Team</a></li>
+                    <ul id="search-dropdown-menu" class="dropdown-menu" role="menu">
+                        <li><a href="#individuals">Individuals</a></li>
+                        <li><a href="#teams">Teams</a></li>
                     </ul>
                 </div>
                 <input type="hidden" name="search_param" value="all" id="search_param">
-                <input type="text" class="form-control" name="x" placeholder="Search term...">
+                <input type="text" class="form-control" name="x" placeholder="Search...">
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button"><span
-                            class="glyphicon glyphicon-search"></span></button>
+                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
                 </span>
             </div>
         </div>
-        <!--<div class="col-sm-3 col-md-3 col-md-offset-3">-->
-        <!--<form class="navbar-form" role="search">-->
-        <!--<div class="input-group">-->
-        <!--<input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">-->
-        <!--<div class="input-group-btn">-->
-        <!--<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>-->
-        <!--</button>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</form>-->
+
+        <!--<div class="col-md-6 col-md-3 col-md-offset-3">-->
+            <!--<form class="navbar-form" role="search">-->
+                <!--<div class="input-group">-->
+                    <!--<input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">-->
+                    <!--<div class="input-group-btn">-->
+                        <!--<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>-->
+                        <!--</button>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</form>-->
         <!--</div>-->
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
