--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -38,7 +38,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Invitation</h4>
+                        <h4 class="modal-title">Invite {{searchBarAtTopUsername}}</h4>
                     </div>
                     <div class="modal-body">
                         <label class="control-label">Invite Type</label>
@@ -46,25 +46,23 @@
                                 ng-init="option = options[0]"
                                 ng-model="option"
                                 ng-options="option as option.label for option in options"
-                                ng-change="updateTeamSelect()">
+                                ng-change="updateTeamSelect(option)">
                         </select>
 
 
                         <label ng-if="option.label == 'Team'" class="control-label">Select Team</label>
                         <select class="form-control"
-                                ng-if="option.label == 'Team'"
+                                ng-if="option.label == 'Team' && teamSelects != null"
                                 ng-init="teamSelect = teamSelects[0]"
                                 ng-model="teamSelect"
                                 ng-options="teamSelect as teamSelect.teamName for teamSelect in teamSelects">
                         </select>
 
-                        <label class="control-label">Enter Team Name</label>
-                        <input type="text" class="form-control" id="teamName" name="teamName">
-                        <label class="control-label">Enter Team Description</label>
-                        <input type="text" class="form-control" id="teamDescription" name="teamDescription">
+                        <label class="control-label">Enter Invite Message:</label>
+                        <input ng-model="modalMessageInvite" type="text" class="form-control" id="modalMessageInvite" name="modalMessageInvite">
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-default">Invite</button>
+                        <button type="submit" class="btn btn-default" ng-click="sendSearchInvite()">Invite</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </div>
