--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -30,23 +30,24 @@
                     </ul>
                 </div>
                 <input type="hidden" name="search_param" value="all" id="search_param">
-                <input type="text" class="form-control" name="x" placeholder="Search...">
+                <input type="text" class="form-control" id="search-bar-at-top" name="x" placeholder="Search...">
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+                    <button ng-click="openInviteModal()" class="btn btn-default" type="button"><span
+                            class="glyphicon glyphicon-search"></span></button>
                 </span>
             </div>
         </div>
 
         <!--<div class="col-md-6 col-md-3 col-md-offset-3">-->
-            <!--<form class="navbar-form" role="search">-->
-                <!--<div class="input-group">-->
-                    <!--<input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">-->
-                    <!--<div class="input-group-btn">-->
-                        <!--<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>-->
-                        <!--</button>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</form>-->
+        <!--<form class="navbar-form" role="search">-->
+        <!--<div class="input-group">-->
+        <!--<input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">-->
+        <!--<div class="input-group-btn">-->
+        <!--<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>-->
+        <!--</button>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</form>-->
         <!--</div>-->
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
