--- a/src/main/resources/templates/fragment/User/bottom.html
+++ b/src/main/resources/templates/fragment/User/bottom.html
@@ -5,6 +5,7 @@
             <ul class="list-inline">
                 <li><a th:href="@{/content/faq}">FAQ</a></li>
                 <li><a th:href="@{/content/contactus}">Contact Us</a></li>
+                <li><a th:href="@{/content/wiki}">Wiki</a></li>
             </ul>
         </div>
     </footer>
