Start of ajax file upload message.

--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -299,7 +299,7 @@
                                 <input style='display: none' ng-value="currentUserId" type="text" id="itoUserId"
                                        name="toUserId">
                                 <div class="input-group">
-                                    <input ng-model="currentIndMessage" type="text" class="form-control" id="imessage"
+                                    <input ng-model="message.ind" type="text" class="form-control" id="imessage"
                                            name="message">
                                     <span class="input-group-btn"><button ng-click="sendIndMessage()" id='sendIndMsgButton' type="submit"
                                                                           class="btn btn-default">Send to
