--- a/src/main/resources/templates/fragment/User/bottom.html
+++ b/src/main/resources/templates/fragment/User/bottom.html
@@ -3,9 +3,9 @@
         <div class="container">
             <p class="text-muted">Copyright @2016 Messaging System</p>
             <ul class="list-inline">
-                <li><a th:href="@{/content/faq}">FAQ</a></li>
-                <li><a th:href="@{/content/contactus}">Contact Us</a></li>
-                <li><a th:href="@{/content/wiki}">Wiki</a></li>
+                <li><a th:href="@{/user/content/faq}">FAQ</a></li>
+                <li><a th:href="@{/user/content/contactus}">Contact Us</a></li>
+                <li><a th:href="@{/user/content/wiki}">Wiki</a></li>
             </ul>
         </div>
     </footer>
