--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -6,6 +6,7 @@
 <th:block th:replace="fragment/User/top">
 </th:block>
 
+<!-- Sidebar -->
 <div class="col-xs-7 col-sm-3 col-md-3 sidebar sidebar-left sidebar-animate sidebar-md-show">
     <ul class="nav navbar-stacked">
         <select class="form-control" ng-model="typemsg" ng-init="typemsg=typemessages[0]"
@@ -26,6 +27,7 @@
         </div>
     </ul>
 </div>
+<!-- end of sidebar -->
 
 <div id="page-content-wrapper">
     <div class="container-fluid">
