Highlight current conversation on sidebar

--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -199,3 +199,9 @@ body {
 #search-bar {
     margin-top: 8px
 }
+
+.divider {
+    height: 3px;
+    background-color: limegreen;
+    color: limegreen;
+}
