--- a/src/main/resources/templates/fragment/Admin/top.html
+++ b/src/main/resources/templates/fragment/Admin/top.html
@@ -3,7 +3,7 @@
     <head>
 
         <div th:replace="fragment/dependency" th:remove="tag"></div>
-        <!--/*@thymesVar id="user" type="com.uww.messaging.model.User"*/-->
+        <!--/*@thymesVar id="user" type="com.uww.messaging.model.user.User"*/-->
         <title th:text="'Hi ' + ${user.firstName}"></title>
     </head>
     <body>
